Improve .gitignore for MCP Library
- Added comprehensive .gitignore patterns for multi-server library
- Covers node_modules, environment files, and build outputs for all servers
- Added IDE and OS-specific ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
+# Dependencies
 node_modules/
-.env
+*/node_modules/
 *.log
+
+# Environment variables
+.env
+*/.env
+
+# Build outputs
+*/build/
+*/dist/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
