Perfect restructure: True container pattern
✅ Fixed structure:
- mcp-library/ → Simple container with only README.md
- github-mcp/ → Fully autonomous server with all config files

🔄 File movements:
- Moved .gitignore to github-mcp/ (server-specific rules)
- .env & .env.example already in github-mcp/ (removed duplicates)
- Simplified library README.md (removed redundant sections)

🎯 Benefits:
- True modular design
- Each server completely autonomous
- Easy to add new MCP servers
- Clean separation of concerns

📦 Structure: mcp-library/ (container) → github-mcp/ (autonomous server)

--- a/github-mcp/.gitignore
+++ b/github-mcp/.gitignore
@@ -1,4 +1,28 @@
+# Dependencies
 node_modules/
-.env
 *.log
+
+# Environment variables
+.env
+
+# Build outputs
+build/
+dist/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Test files
+SUPPRESSION_MANUELLE.md
+TEST_16H.md
